tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__approvals_selection_popup@windows_degraded.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 3945
expression: popup
---
  Update Model Permissions

› 1. Read Only (current)             Agere can read files in the current
                                     workspace. Approval is required to edit
                                     files or access the internet.
  2. Default (non-admin restriction)  Agere can read and edit files in the
                                     current workspace, and run commands.
                                     Approval is required to access the
                                     internet or edit other files.
  3. Full Access                     Agere can edit files outside this
                                     workspace and access the internet without
                                     asking for approval. Exercise caution
                                     when using.

  Press enter to confirm or esc to go back
